[gd_scene load_steps=6 format=3 uid="uid://cjk5cqs2ujy71"]

[ext_resource type="Script" path="res://scenes/Wraith.gd" id="1_h86be"]
[ext_resource type="SpriteFrames" uid="uid://bx1st7alf6nfw" path="res://assets/enemies/wraith/wraith.tres" id="1_jjq14"]
[ext_resource type="PackedScene" uid="uid://wqlkswwkxurl" path="res://scenes/score_display.tscn" id="3_mgm1g"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0ihme"]
height = 22.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gf2f0"]
radius = 8.0
height = 16.0

[node name="Wraith" type="RigidBody2D"]
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
sleeping = true
lock_rotation = true
script = ExtResource("1_h86be")

[node name="WraithHealthDisplay" parent="." instance=ExtResource("3_mgm1g")]
z_index = 12
offset_left = -16.0
offset_top = -25.0
offset_right = -16.0
offset_bottom = -25.0

[node name="WraithAnimation" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("1_jjq14")
animation = &"idle"
frame_progress = 0.125416

[node name="WraithAttack" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="WraithAttackHitbox" type="CollisionShape2D" parent="WraithAttack"]
position = Vector2(0, -4)
shape = SubResource("CapsuleShape2D_0ihme")
debug_color = Color(0.964706, 0.0509804, 0.454902, 0.419608)

[node name="WraithHitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="WraithCollider" type="CollisionShape2D" parent="WraithHitbox"]
position = Vector2(2, -1)
shape = SubResource("CapsuleShape2D_gf2f0")

[node name="WraithCollider" type="CollisionShape2D" parent="."]
position = Vector2(2, -1)
shape = SubResource("CapsuleShape2D_gf2f0")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="WraithAnimation" to="." method="_on_animation_finished"]
[connection signal="area_entered" from="WraithAttack" to="." method="_on_wraith_attack_area_entered"]
[connection signal="body_entered" from="WraithAttack" to="." method="_on_wraith_attack_body_entered"]
